--- a/package.json
+++ b/package.json
@@ -17,12 +17,17 @@
   "author": "Francisco Puma",
   "license": "MIT",
   "devDependencies": {
+    "jest": "^27.0.6",
     "nodemon": "^2.0.3"
   },
   "dependencies": {
-    "dotenv": "^8.2.0",
+    "bcrypt": "^5.0.1",
+    "connect-session-sequelize": "^7.1.1",
+    "dotenv": "^8.6.0",
     "express": "^4.17.1",
-    "mysql2": "^2.1.0",
-    "sequelize": "^5.21.7"
+    "express-handlebars": "^5.3.2",
+    "express-session": "^1.17.2",
+    "mysql2": "^2.2.5",
+    "sequelize": "^5.22.4"
   }
 }
